--- a/index.html
+++ b/index.html
@@ -1,28 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=1, initial-scale=1.0" />
-    <title>Weather App</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rager Vanilla Weather App</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
+
+    <script
+      src="https://kit.fontawesome.com/5340ad212b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary"> Click me </a>
+      <form id="city-form">
+        <input
+          class="form-control form-control enterLocation"
+          type="text"
+          placeholder="Enter location"
+          id="enter-city"
+          required
+        />
+        <input
+          type="submit"
+          value="Enter"
+          id="submit-city"
+          class="btn btn-secondary btn-sm citySubmit"
+        />
+        <button class="btn btn-secondary btn-sm" id="geolocation-temps-submit">
+          Current location
+        </button>
+      </form>
+      <div class="todaysTemp">
+        <h1 id="city-selected">Minneapolis</h1>
+        <h3>Today</h3>
+        <i class="fa-solid fa-sun todaysSun"></i>
+        <h5 class="todaysDegrees">80°/57°</h5>
+        <button type="button" class="btn btn-secondary btn-sm hourly">
+          Hourly
+        </button>
+      </div>
+      <br />
+      <br />
+      <div class="row futureTemps">
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-one">Monday</h5>
+              <i class="fa-solid fa-cloud-showers-heavy rainyday"></i>
+              <p class="card-text">71°/54°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-two">Tuesday</h5>
+              <i class="fa-solid fa-cloud-showers-heavy rainyday"></i>
+              <p class="card-text">70°/57°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-three">Wednesday</h5>
+              <i class="fa-regular fa-sun sunny"></i>
+              <p class="card-text">65°/49°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-four">Thursday</h5>
+              <i class="fa-solid fa-cloud-sun partlycloudy"></i>
+              <p class="card-text">72°/58°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-five">Friday</h5>
+              <i class="fa-regular fa-sun sunny"></i>
+              <p class="card-text">68°/57°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title" id="tile-six">Saturday</h5>
+              <i class="fa-solid fa-cloud-sun partlycloudy"></i>
+              <p class="card-text">63°/54°</p>
+              <button type="button" class="btn btn-secondary btn-sm">
+                More details
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <script src="src/app.js"></script>
   </body>
-  <script src="src/app.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"
-  ></script>
 </html>
