--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="todaysTemp">
         <h1 id="city-selected">Minneapolis</h1>
         <h3>Today</h3>
+        <h4 class="currentTime">8:00 pm</h4>
         <i class="fa-solid fa-sun todaysSun"></i>
         <h5 class="todaysDegrees">80°/57°</h5>
         <button type="button" class="btn btn-secondary btn-sm hourly">
